tests/reject/nottwelve.ul
int factorial (int n) 
{
	if(n==1){
		return 1;
	}
	else
	{
		return n*factorial(n-1);
	}
}

void main(){
	
	print "the factorial of 8 is ";
	println factorial(8);


